<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2010 Rodrigo Damazio <rodrigo@damazio.org>

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions
are met:

1. Redistributions of source code must retain the above copyright
   notice, this list of conditions and the following disclaimer.
2. Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
<resources>
  <!-- Plugin registration -->
  <string name="app_name">Locale Remote Notification Plugin</string>
  <string name="plugin_name">Remote Notification</string>

  <!-- Settings screen -->
  <string name="title">Notification title:</string>
  <string name="description">Notification description:</string>
  <string name="empty_fields_hint">Hint: Some desktop-side applications require both fields, although most are happy with just one.</string>

  <!-- Helper activity -->
  <string name="helper_info_deps">This plugin is ready to use, but uou will need the following for it to work:</string>
  <string name="helper_info_deps_notifier">1. The \"Remote Notifier\" app from Android Market, which shows the notifications:</string>
  <string name="helper_info_deps_locale">2. Either the \"Tasker\" or \"Locale\" app, which are available from the Market too.</string>
  <string name="get_notifier">Get Remote Notifier</string>
  <string name="get_tasker">Get \"Tasker\"</string>
  <string name="get_locale">Get \"Locale\"</string>
    
</resources>
