<?xml version="1.0" encoding="utf-8"?>
<!-- 
Copyright 2010 Peter Vegh <peter.vegh@gmail.com>

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions
are met:

1. Redistributions of source code must retain the above copyright
   notice, this list of conditions and the following disclaimer.
2. Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
  <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:padding="5dip">
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:text="@string/helper_info_deps" />
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/helper_info_deps_notifier" 
              android:paddingTop="6dip"
              android:paddingBottom="6dip" />
    <Button android:id="@+id/button_get_notifier"
            android:text="@string/get_notifier"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center"
            android:textSize="14dip"
            android:paddingTop="6dip" />
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/helper_info_deps_locale" 
              android:paddingTop="6dip"
              android:paddingBottom="6dip" />
    <Button android:id="@+id/button_get_tasker"
            android:text="@string/get_tasker"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center"
            android:textSize="14dip" />
    <Button android:id="@+id/button_get_locale"
            android:text="@string/get_locale"
            android:layout_width="wrap_content"
            android:layout_height="48dip"
            android:layout_gravity="center"
            android:textSize="14dip" />
  </LinearLayout>
</LinearLayout>